After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 161998 - Save Confirmation dialog is not HIG compliant
Save Confirmation dialog is not HIG compliant
Status: RESOLVED FIXED
Product: gedit
Classification: Applications
Component: general
git master
Other All
: Normal minor
: ---
Assigned To: Gedit maintainers
gedit QA volunteers
Depends on:
Blocks:
 
 
Reported: 2004-12-22 16:25 UTC by Paolo Maggi
Modified: 2005-01-10 19:05 UTC
See Also:
GNOME target: ---
GNOME version: 2.9/2.10


Attachments
This attachment contains a patch that changes "Don't Save" button to "Close without Saving". (770 bytes, patch)
2004-12-30 08:21 UTC, Naveen Chandran V
none Details | Review

Description Paolo Maggi 2004-12-22 16:25:36 UTC
Save Confirmation dialog is not HIG compliant.
The "Don't Save" button should be changed to "Close without Saving".

Other information:
Comment 2 Naveen Chandran V 2004-12-30 08:21:41 UTC
Created attachment 35288 [details] [review]
This attachment contains a patch that changes "Don't Save" button to "Close without Saving".

This patch has the fix. 
Save Confirmation dialog is now HIG compliant.

Here is the Change Log Entry

2004-12-30 Naveen & Team < naveenchandranv@gmail.com >

    * Fixed bug #161998 ( http://bugzilla.gnome.org/show_bug.cgi?id=161998 ).
      Save Confirmation dialog is now HIG compliant.
      The "Don't Save" button has been changed to "Close without Saving".
Comment 3 Paolo Borelli 2005-01-10 19:05:58 UTC
thanks a lot for the patch. I committed it with a small modification (not your
fault): using the C accelerator for "_Close without saving" clashes with the one
for "_Cancel" so I used "Close _without saving"