//bugzilla.gnome.org/show_bug.cgi?id=161998). Save Confirmation dialog is

2005-01-10 Naveen & Team < naveenchandranv@gmail.com >

	* Fixed bug #161998 (http://bugzilla.gnome.org/show_bug.cgi?id=161998).
	Save Confirmation dialog is now HIG compliant.
	The "Don't Save" button has been changed to "Close without Saving".